style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
  text-decoration: none;
  list-style: none;
}

section {
  background: #e5e5e5;
}

.header-section {
  background-color: #fff;
}

.header {
  display: flex;
  padding: 12px;
  justify-content: space-between;
  margin-left: 48px;
  margin-right: 48px;
}

.logo {
  color: #6070ff;
  font-weight: 700;
  font-size: 18px;
  line-height: 20px;
  cursor: pointer;
}

.nav-list {
  display: none;
}

.hambuger {
  cursor: pointer;
}

.bar {
  display: block;
  width: 16px;
  height: 2px;
  margin: 5px auto;
  background-color: #acb7c3;
}

.img-BG {
  background: url(images/Header\ bg@2x.png) no-repeat;
  background-size: 100% auto;
  padding: 105px 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.name {
  width: 327px;
  height: 150px;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
}

.my-qualities1 {
  width: 327px;
  height: 146px;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
  padding-top: 10px;
  position: relative;
  animation-name: paragraph;
  animation-duration: 2s;
  animation-fill-mode: forwards;
}

@keyframes paragraph {
  0% {
    left: -1000px;
  }

  100% {
    left: 0;
  }
}

.lets-connect1 {
  margin-bottom: 10px;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
  padding-top: 10px;
}

.social-media1 {
  max-width: 70%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 8px;
  list-style: none;
}

.project-container,
.multiPostStories-con {
  background-color: #fff;
  border: 1px solid #dfe1e6;
  border-radius: 16px;
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 12px;
  padding: 16px;
  margin-top: 25%;
}

img {
  max-width: 100%;
  transform: scale(1);
  transition: 0.5s;
}

img:hover {
  transform: scale(1.2);
}

.project-review {
  font-size: 32px;
  font-family: sans-serif, 'Poppins';
  font-weight: 700;
  font-style: normal;
  line-height: 44px;
  width: 295px;
  height: 36px;
  color: #172b4d;
  margin-top: 10px;
}

.backend-dev {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 85%;
  margin-top: 10px;
}

.canopy {
  width: 55px;
  height: 16px;
  font-family: sans-serif, 'Poppins';
  font-size: 13px;
  font-weight: 600;
  font-style: normal;
  line-height: 16px;
  color: #344563;
}

.back-end {
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  line-height: 16px;
  color: #7a869a;
}

.access-project {
  width: 295px;
  height: 76px;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
  margin-top: 10px;
}

.programming-lang {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 70%;
  margin-top: 10px;
}

.lang {
  background-color: #ebebff;
  border-radius: 8px;
  padding: 4px 12px;
  color: #6070ff;
  letter-spacing: 0.03em;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
}

.project-btn {
  display: flex;
  margin-top: 15px;
  flex-direction: row;
  align-items: center;
  padding: 12px;
  border: 1px solid #6070ff;
  border-radius: 8px;
  width: 128px;
}

button {
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  letter-spacing: 0.03em;
  color: #396df2;
  display: flex;
  cursor: pointer;
  transform: 0.5s;
  align-items: center;
  text-align: center;
  border: none;
  background-color: white;
}

button:hover {
  text-decoration: underline;
}

.aboutMe-container {
  width: 100%;
  margin-top: 25%;
  background-color: #fff;
  padding: 16px;
  border-top-right-radius: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.me {
  width: 32px;
  height: 101px;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  display: flex;
  align-items: center;
  color: #172b4d;
  margin-top: 20%;
}

.my-qualities {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
  margin-top: 5%;
}

.lets-connect {
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
  margin-top: 5px;
}

.social-media {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 8%;
  width: 60%;
}

.project-btn2 {
  margin-top: 11px;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px;
  border: 1px solid #6070ff;
  border-radius: 8px;
  width: 165px;
}

.language-title {
  margin-top: 11%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.language {
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
  color: #000;
}

.languages {
  display: grid;
  grid-template-columns: 23% 23%;
  align-items: center;
  margin-top: 5%;
  background: #f7f7f9;
  border-radius: 8px;
  padding: 5px;
  width: 303px;
}

.framework {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 270px;
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
  color: #000;
  margin-top: 5%;
  margin-bottom: 5%;
}

.form-container {
  margin-top: 100px;
  background-image: url("images/contact\ form\ background\ shapes@2x.png");
  background-repeat: no-repeat;
  background-size: 100% auto;
  background-color: #6070ff;
  border-radius: 50px 0 0 0;
  width: 100%;
}

.contact-container {
  padding: 20px;
  width: 100%;
  margin-top: 20%;
}

.p-tag {
  color: white;
  text-align: center;
  font-size: 20px;
  transform: scale(1);
  transition: 0.5s;
}

.p-tag:hover {
  transform: scale(1.2);
}

.contact-header {
  color: white;
  text-align: center;
  font-size: 40px;
}

.form-control {
  display: flex;
  justify-content: center;
}

.form-control input,
textarea {
  width: 100%;
  display: block;
  box-sizing: border-box;
  padding: 10px;
  border-radius: 5px;
  border: none;
  margin-top: 10px;
}

textarea {
  margin-bottom: 10px;
}

.submit-button {
  display: flex;
  justify-content: center;
}

.submit {
  margin-top: 10px;
  border: none;
  background-color: white;
  color: #6070ff;
  border-radius: 5px;
  padding: 10px;
  margin-bottom: 50px;
  cursor: pointer;
  transition: 0.5s;
}

.submit:hover {
  background-color: #6070ff;
  color: white;
}

@media screen and (min-width: 50em) {
  .nav-list,
  .nav-item {
    margin-left: auto;
    display: inline-block;
    padding-left: 16px;
  }

  .hambuger {
    display: none;
  }

  .name {
    font-size: 48px;
    width: 720px;
    height: 122px;
    line-height: 60px;
    margin-top: 100px;
  }

  .my-qualities1 {
    font-size: 20px;
    width: 920px;
  }

  .social-media1 {
    max-width: 40%;
  }

  .grid-container {
    display: grid;
    grid-template-columns: 1fr;
  }

  .grid-container :nth-child(2) {
    grid-column-end: 0;
  }

  .project-container,
  .multiPostStories-con {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    width: 80%;
    margin: auto;
    margin-top: 10%;
  }

  .span-2,
  .span-4 {
    grid-row-start: 1;
  }

  .project-review {
    font-size: 40px;
    width: 496px;
    height: 46px;
  }

  .access-project {
    font-size: 16px;
    width: 496px;
    height: 50px;
  }

  .backend-dev,
  .programming-lang {
    width: 50%;
  }

  .aboutMe-container {
    margin-top: 2%;
    border-top-right-radius: 100px;
  }

  .form-container {
    border-radius: 100px 0 0 0;
  }

  .p-tag {
    width: 569px;
    height: 102px;
    margin: auto;
  }

  .aboutMe-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    gap: 1.5rem;
  }

  .me {
    font-size: 40px;
  }

  .my-qualities {
    width: 447px;
    height: 102px;
    font-size: 16px;
  }

  .programmingLanguage-con {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    margin-top: 3%;
  }

  .languages {
    width: 122px;
    display: flex;
    flex-direction: column;
  }

  .framework {
    width: 100%;
  }

  .push {
    margin-bottom: 10%;
  }

  .about-me {
    background-color: #fff;
    padding-bottom: 20px;
  }
}

